--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -171,7 +171,7 @@
                             <ion-card-title>
                                 <ion-icon name="calculator-outline"></ion-icon>
                             </ion-card-title>
-                            Calories Calculator
+                            Calories
                         </ion-card-content>
                     </ion-card>
                 </ion-col>
