--- a/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
+++ b/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
@@ -1,7 +1,9 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-         <ion-icon name="arrow-back" aria-hidden="true" class="bb" slot="start" (click)="dismissModal()"></ion-icon>
+            <ion-button class="default-button" (click)="dismissModal()">
+                <ion-icon name="arrow-back" class="bb"></ion-icon>
+            </ion-button>
         </ion-buttons>
         <ion-title>View Exercises</ion-title>
     </ion-toolbar>
