workout scheduling fixes

--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -12,17 +12,14 @@
     <ion-card-content>
       SweatSession is a fitness app that allows users to track their workouts progress, and make some friends along the way.
     </ion-card-content>
+  
+    <button class="learn-more getSButton" routerLink="/login">
+      <span class="circle" aria-hidden="true">
+        <span class="icon arrow"></span>
+      </span>
+      <span class="button-text">Get Started</span>
+    </button>
     
-<!--    <ion-button size="large" class="getSButton"  fill="outline" routerLink="/login">-->
-<!--      Get started-->
-<!--    </ion-button>-->
-       <button class="learn-more getSButton" routerLink="/login"> <!-- TODO: fix the animation-->
-          <span class="circle" aria-hidden="true">
-          <span class="icon arrow"></span>
-          </span>
-           <span class="button-text">Get Started</span>
-       </button>
-
    </div>
   </ion-card>
 </ion-content>
