--- a/src/app/pages/splash/splash.page.scss
+++ b/src/app/pages/splash/splash.page.scss
@@ -6,7 +6,7 @@ ion-card {
   justify-content: center;
   border-radius: 0px;
   background-color: white;
-  border: 2px solid rgb(9, 50, 66);
+  border: 2px solid #A8DADC;
   overflow-y:auto;
   .inner-wrapper {
     max-width: 500px;
@@ -79,7 +79,7 @@ button.learn-more .circle {
   margin: 0;
   width: 3rem;
   height: 3rem;
-  background: #282936;
+  background:  #457B9D;
   border-radius: 1.625rem;
 }
 
