--- a/src/app/pages/userprofile/userprofile.page.scss
+++ b/src/app/pages/userprofile/userprofile.page.scss
@@ -63,3 +63,12 @@ ion-title {
 ion-icon {
     color: #457b9d;
 }
+.profile-image.pop-out {
+    transform: scale(1.2);
+    transition: transform 0.3s ease;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.custom-max-size-modal {
+    max-height: 10%;
+}
