preparing for survey release

--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -27,7 +27,7 @@
         </ion-avatar>
         <ion-grid>
           <ion-row>
-            <ion-label class="Bcard2"><b>&nbsp;{{notice.sendername}}</b></ion-label>
+            <ion-label class="Bcard2"><b style="font-size: 20px;">&nbsp;{{notice.sendername}}</b></ion-label>
           </ion-row>  
           <ion-label class="Bcard">&nbsp;{{notice.message}}</ion-label>
         </ion-grid>
