--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -154,7 +154,7 @@
                 </ion-card>
               </ion-col>
             </ion-row>
-            <ion-row>
+            <!-- <ion-row>
               <ion-col size="12">
                 <ion-card class="discover-card" routerLink="/exercise-explorer">
                  <ion-card-content>
@@ -165,7 +165,7 @@
                  </ion-card-content>
                 </ion-card>
               </ion-col>
-            </ion-row>
+            </ion-row> -->
           </ion-grid>
         </ion-card>
       </div>
