groups bug fix + phrasing fix

--- a/src/app/pages/workout-scheduling/schedule/schedule.component.html
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.html
@@ -13,7 +13,7 @@
     <ion-item>
       <ion-icon name="receipt-outline"></ion-icon>
       <ion-text>
-        You have 0 {{categoryName}} scheduled workout sessions.
+        You have 0 {{categoryName}} workout sessions.
       </ion-text>
     </ion-item>
   </ion-card>
