prepare for release

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,13 +6,14 @@
   </ion-header>
 
   <ion-content>
-    <ion-item lines="none" class="clickable" (click)="goToSettings()">
+    <!-- Temporarily commented out -->
+    <!-- <ion-item lines="none" class="clickable" (click)="goToSettings()">
       <ion-icon name="settings-outline" class="menu-icons"></ion-icon>
       <ion-label class="menu-label">
         Settings
       </ion-label>
       <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
-    </ion-item>
+    </ion-item> -->
    
 
     <ion-item lines="none" class="clickable" (click)="userLogout()">
