--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -30,7 +30,7 @@
               <div class="inner-zero-content-wrapper">
                 <ion-icon class="large-icon" name="person"></ion-icon><br>
                 <ion-text>
-                  You don't have any chatting friends at the moment.
+                  You don't have any chats at the moment.
                 </ion-text>
               </div>
             </div>
