made the bar for selecting the calculator

--- a/src/app/pages/calories-calculator/calories-calculator.page.scss
+++ b/src/app/pages/calories-calculator/calories-calculator.page.scss
@@ -126,3 +126,11 @@
 .slider:hover .level {
   height: calc(var(--slider-height) * 2);
 }
+
+.outer-container {
+  height: 20vh;
+}
+
+.inner-container {
+  padding-top: 50px;
+}
