--- a/src/app/pages/calories-calculator/calories-calculator.page.html
+++ b/src/app/pages/calories-calculator/calories-calculator.page.html
@@ -1,53 +1,92 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-item lines="none">
-            <backbutton class="larger-back-button"></backbutton>
-            <ion-title>Calories Calculator</ion-title>
-        </ion-item>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-item lines="none">
+      <backbutton class="larger-back-button"></backbutton>
+      <ion-title>Calories Calculator</ion-title>
+    </ion-item>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-card  class="ion-text-center">
-        <ion-card-title>
-            <h1>Calories Calculator</h1>
-        </ion-card-title>
-        <ion-card-content>
-            <ion-list>
-                <ion-item lines="none">
-                    <div class="icon-container" >
-                        <ion-icon name="calculator" class="calculator-icon"></ion-icon>
-                    </div>
-                </ion-item>
-                <ion-item lines="none">
-                    <ion-label>BMR Value: {{calculateandGet_BMR()}}</ion-label>
-                </ion-item>
-                <ion-item lines="none">
-                    <ion-label>TDEE Value: {{calculateandGet_TDEE()}} calories per day</ion-label>
-                </ion-item>
-                <ion-item lines="none">
-                    <ion-label>Commitment Level</ion-label>
-                    <ion-select [(ngModel)]="commitmentLevel">
-                        <ion-select-option value="1.2">Little to no exercise</ion-select-option>
-                        <ion-select-option value="1.375">Light exercise (1–3 days per week)</ion-select-option>
-                        <ion-select-option value="1.55">Moderate exercise (3–5 days per week)</ion-select-option>
-                        <ion-select-option value="1.725">Heavy exercise (6–7 days per week)</ion-select-option>
-                        <ion-select-option value="1.9">Very heavy exercise (twice per day, extra heavy workouts)</ion-select-option>
-                    </ion-select>
-                </ion-item>
-                <ion-item lines="none">
-                    <ion-label>Weight Goals</ion-label>
-                    <ion-select [(ngModel)]="weightGoals">
-                        <ion-select-option value="0.8">Lose Weight</ion-select-option>
-                        <ion-select-option value="1">Maintain Weight</ion-select-option>
-                        <ion-select-option value="1.2">Gain Weight</ion-select-option>
-                    </ion-select>
-                </ion-item>
-                <ion-item lines="none">
-                    <ion-label>Calories Consumption: {{calculateTargetCalories()}}</ion-label>
-                </ion-item>
-<!--                <ion-button>Calculate</ion-button>-->
-            </ion-list>
-        </ion-card-content>
-    </ion-card>
+  <div class="outer-container">
+    <ion-content>
+      <div class="inner-container">
+        <ion-segment value="exercise">
+          <!-- <ion-segment-button value="group">
+          <ion-label>Groups</ion-label>
+        </ion-segment-button> -->
+          <ion-segment-button value="exercise">
+            <ion-label>Exercise Calculator</ion-label>
+          </ion-segment-button>
+          <!-- <ion-segment-button value="group">
+            <ion-label>Groups</ion-label>
+          </ion-segment-button> -->
+        </ion-segment>
+
+        <exercise-calculator
+          [hidden]="selectedSegment !=='exercise'"
+        ></exercise-calculator>
+        <!-- <usersearch [hidden]="selectedSegment !=='user'"></usersearch> -->
+        <!-- <usersearch [hidden]="selectedSegment !=='user'"></usersearch> -->
+      </div>
+    </ion-content>
+  </div>
+
+  <ion-card class="ion-text-center">
+    <ion-card-title>
+      <h1>Calories Calculator</h1>
+    </ion-card-title>
+    <ion-card-content>
+      <ion-list>
+        <ion-item lines="none">
+          <div class="icon-container">
+            <ion-icon name="calculator" class="calculator-icon"></ion-icon>
+          </div>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label>BMR Value: {{calculateandGet_BMR()}}</ion-label>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label
+            >TDEE Value: {{calculateandGet_TDEE()}} calories per day</ion-label
+          >
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label>Commitment Level</ion-label>
+          <ion-select [(ngModel)]="commitmentLevel">
+            <ion-select-option value="1.2"
+              >Little to no exercise</ion-select-option
+            >
+            <ion-select-option value="1.375"
+              >Light exercise (1–3 days per week)</ion-select-option
+            >
+            <ion-select-option value="1.55"
+              >Moderate exercise (3–5 days per week)</ion-select-option
+            >
+            <ion-select-option value="1.725"
+              >Heavy exercise (6–7 days per week)</ion-select-option
+            >
+            <ion-select-option value="1.9"
+              >Very heavy exercise (twice per day, extra heavy
+              workouts)</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label>Weight Goals</ion-label>
+          <ion-select [(ngModel)]="weightGoals">
+            <ion-select-option value="0.8">Lose Weight</ion-select-option>
+            <ion-select-option value="1">Maintain Weight</ion-select-option>
+            <ion-select-option value="1.2">Gain Weight</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label
+            >Calories Consumption: {{calculateTargetCalories()}}</ion-label
+          >
+        </ion-item>
+        <!--                <ion-button>Calculate</ion-button>-->
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
