calorie target comp generated

--- a/src/app/pages/calories-calculator/calories-calculator.page.scss
+++ b/src/app/pages/calories-calculator/calories-calculator.page.scss
@@ -128,9 +128,9 @@
 }
 
 .outer-container {
-  height: 20vh;
+  height: 10vh;
 }
 
 .inner-container {
-  padding-top: 50px;
+  // padding-top: 50px;
 }
