--- a/src/app/pages/calories-calculator/calories-calculator.page.html
+++ b/src/app/pages/calories-calculator/calories-calculator.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-item lines="none">
       <backbutton class="larger-back-button"></backbutton>
-      <ion-title>Calories Calculator</ion-title>
+      <ion-title>Calorie Calculator</ion-title>
     </ion-item>
   </ion-toolbar>
 </ion-header>
@@ -32,6 +32,7 @@
     </ion-content>
   </div>
 
+  <!-- make the code from here until -->
   <ion-card class="ion-text-center">
     <ion-card-title>
       <h1>Calories Calculator</h1>
@@ -89,4 +90,5 @@
       </ion-list>
     </ion-card-content>
   </ion-card>
+  <!-- here into a component -->
 </ion-content>
