moved calc to component
Co-authored-by: Triumph Ndlovu <realtriumphndlovu@gmail.com>
Co-authored-by: ShuaibNuruddin <u21497402@tuks.co.za>

--- a/src/app/pages/calories-calculator/calories-calculator.page.html
+++ b/src/app/pages/calories-calculator/calories-calculator.page.html
@@ -11,10 +11,10 @@
   <div class="outer-container">
     <ion-content>
       <div class="inner-container">
-        <ion-segment value="exercise">
-          <!-- <ion-segment-button value="group">
-          <ion-label>Groups</ion-label>
-        </ion-segment-button> -->
+        <ion-segment value="target" (ionChange)="onSegmentChange($event)">
+          <ion-segment-button value="target">
+          <ion-label>Calorie Target</ion-label>
+        </ion-segment-button>
           <ion-segment-button value="exercise">
             <ion-label>Exercise Calculator</ion-label>
           </ion-segment-button>
@@ -23,10 +23,10 @@
           </ion-segment-button> -->
         </ion-segment>
 
+        <calorie-target [hidden]="selectedSegment !=='target'"></calorie-target>
         <exercise-calculator
           [hidden]="selectedSegment !=='exercise'"
         ></exercise-calculator>
-        <!-- <usersearch [hidden]="selectedSegment !=='user'"></usersearch> -->
         <!-- <usersearch [hidden]="selectedSegment !=='user'"></usersearch> -->
       </div>
     </ion-content>
