--- a/src/app/pages/search/group/group.component.html
+++ b/src/app/pages/search/group/group.component.html
@@ -3,7 +3,6 @@
       placeholder="Search for Groups"
       [(ngModel)] = "searchTerms.searchQuery"
       (ionInput) = onSearchInput($event)
-      color="light"
       animated
       >
   </ion-searchbar>
@@ -40,20 +39,39 @@
         </ion-col>
       </ion-row>
       <ion-row *ngFor="let row of rows">
-        <ion-col *ngFor="let item of row" size="6">
-          <ion-item class="groups-recommendations" lines="none">
+        <!-- <ion-col *ngFor="let item of row" size="6">
+          <ion-item>
             <ion-avatar slot="start">
               <ion-img [src]="item.profileURL"></ion-img>
             </ion-avatar>
             <ion-label class="label">
-              <h2>{{item.displayName}}</h2>
+              <h5>{{item.displayName}}</h5>
               <p>{{item.bio}}</p>
+              <ion-buttons>
+                <ion-button class="default-button" expand="block" (click)="selectGroup(item)">
+                  <ion-icon name="chevron-forward-outline" class="view-button"></ion-icon>
+                </ion-button>
+              </ion-buttons>
             </ion-label>
           </ion-item>
-          <ion-buttons>
-            <ion-button class="view-button" expand="block" (click)="selectGroup(item)">View Group</ion-button>
-          </ion-buttons>
+        </ion-col> -->
+        <ion-col *ngFor="let item of row" size="6">
+          <ion-item>
+            <ion-avatar slot="start">
+              <ion-img [src]="item.profileURL"></ion-img>
+            </ion-avatar>
+            <ion-label class="label">
+              <h5>{{item.displayName}}</h5>
+              <p class="overflow-hidden">{{item.bio}}</p>
+              <ion-buttons>
+                <ion-button class="default-button" expand="block" (click)="selectGroup(item)">
+                  <ion-icon name="chevron-forward-outline" class="view-button"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-label>
+          </ion-item>
         </ion-col>
+        
       </ion-row>
     </ion-grid>
   </div>
