Goals UI changes

--- a/src/app/pages/fitnessgoals/fitnessgoals.page.html
+++ b/src/app/pages/fitnessgoals/fitnessgoals.page.html
@@ -10,17 +10,17 @@
 <ion-content>
 
 
-    <ng-container *ngIf="GOALS.length > 0; else noGoalsTemplate">
+<!--    <ng-container *ngIf="GOALS.length > 0; else noGoalsTemplate">-->
         <app-goalcard></app-goalcard>
-    </ng-container>
+<!--    </ng-container>-->
 
-    <ng-template #noGoalsTemplate>
-        <ion-card>
-            <ion-card-header>
-                <ion-card-title>There are no goals yet</ion-card-title>
-            </ion-card-header>
-        </ion-card>
-    </ng-template>
+<!--    <ng-template #noGoalsTemplate>-->
+<!--        <ion-card>-->
+<!--            <ion-card-header>-->
+<!--                <ion-card-title>There are no goals yet</ion-card-title>-->
+<!--            </ion-card-header>-->
+<!--        </ion-card>-->
+<!--    </ng-template>-->
 
 
 
