Goals UI changes

--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -43,7 +43,7 @@
         <ion-card>
             <ion-card-content>
                 <ion-card-title>
-                    <ion-text color="danger">Zero Templates</ion-text>
+                    <ion-text color="danger">No Goals yet</ion-text>
                 </ion-card-title>
             </ion-card-content>
         </ion-card>
