--- a/src/app/pages/groups/group-home-page/group-home-page.component.html
+++ b/src/app/pages/groups/group-home-page/group-home-page.component.html
@@ -1,79 +1,79 @@
-<div class="group-page-container">
-  <div class="group-page-profile">
+<ion-content>
+  <div class="group-page-container">
+    <div class="group-page-profile">
+      <div>
+        <backbutton (click)="removeGroupSession()"></backbutton>
+      </div>
+      <div class="profile-inner-wrapper">
+        <div class="profile-img-container">
+          <ion-avatar class="profile-image">
+            <ion-img [src]="selectedGroup.profileURL"></ion-img>
+          </ion-avatar>
+        </div>
+        <ion-label class="profile-label" style="color: white">
+          <div class="name">
+            <h1>{{selectedGroup.displayName}}</h1>
+          </div>
+          <div class="members">
+            <p>{{selectedGroup.members?.length}} Members</p>
+          </div>
+          <div class="bio">
+            <p>{{selectedGroup.bio}}</p>
+          </div>
+        </ion-label>
+        <div class="group-buttons">
+          <ion-button fill="outline" *ngIf="!isGroupMember()" (click)="joinGroup()">
+            <ion-icon name="people" slot="start"></ion-icon>
+            <ion-label>Join</ion-label>
+          </ion-button>
+          <ion-button fill="outline" [disabled]="true" *ngIf="isGroupMember()">
+            <ion-icon name="people" slot="start"></ion-icon>
+            <ion-label>Joined</ion-label>
+          </ion-button>
+          <ion-button fill="outline" (click)="stageGroup()" *ngIf="isGroupMember()">
+            <ion-icon name="chatbox-outline" slot="start"></ion-icon>
+            <ion-label>Chats</ion-label>
+          </ion-button>
+        </div>
+      </div>
+    </div>
     <div>
-      <ion-item lines="none" class="transparent-item">
-        <ion-icon name="arrow-back" slot="start" class="larger-back-button" (click)="closeModal()"></ion-icon>
-      </ion-item>
-    </div>
-    <div class="profile-inner-wrapper">
-      <div class="profile-img-container">
-        <ion-avatar class="profile-image">
-          <ion-img [src]="selectedGroup.profileURL"></ion-img>
-        </ion-avatar>
+      <ion-segment (ionChange)="onSegmentChange($event)" value="members" [scrollable]="true">
+        <ion-segment-button value="members">Members</ion-segment-button>
+        <ion-segment-button value="schedules">Workout Sessions</ion-segment-button>
+        <ion-segment-button value="leaderboard">Leaderboard</ion-segment-button>
+      </ion-segment>
+  
+      <div class="content" [hidden]="selectedSegment !== 'members'">
+        <ion-list class="transparent-list">
+          <group-user *ngFor="let userId of selectedGroup.members"
+          [userId]="userId"
+          [currentUserId]="currentUserId"
+          ></group-user>
+        </ion-list>
       </div>
-      <ion-label class="profile-label" style="color: white">
-        <div class="name">
-          <h1>{{selectedGroup.displayName}}</h1>
-        </div>
-        <div class="members">
-          <p>{{selectedGroup.members?.length}} Members</p>
-        </div>
-        <div class="bio">
-          <p>{{selectedGroup.bio}}</p>
-        </div>
-      </ion-label>
-      <div class="group-buttons">
-        <ion-button fill="outline" *ngIf="!isGroupMember()" (click)="joinGroup()">
-          <ion-icon name="people" slot="start"></ion-icon>
-          <ion-label>Join</ion-label>
-        </ion-button>
-        <ion-button fill="outline" [disabled]="true" *ngIf="isGroupMember()">
-          <ion-icon name="people" slot="start"></ion-icon>
-          <ion-label>Joined</ion-label>
-        </ion-button>
-        <ion-button fill="outline" (click)="stageGroup()" *ngIf="isGroupMember()">
-          <ion-icon name="chatbox-outline" slot="start"></ion-icon>
-          <ion-label>Chats</ion-label>
-        </ion-button>
+  
+      <div class="content" [hidden]="selectedSegment !== 'schedules'">
+        <div class="zero-content-container ">
+          <div class="inner-zero-content-wrapper">
+            <ion-icon class="large-icon" name="receipt"></ion-icon><br>
+            <ion-text>
+              Group has no workout schedules.
+            </ion-text>
+          </div>
+         </div>
+      </div>
+  
+      <div class="content" [hidden]="selectedSegment !== 'leaderboard'">
+        <div class="zero-content-container ">
+          <div class="inner-zero-content-wrapper">
+            <ion-icon class="large-icon" name="bar-chart"></ion-icon><br>
+            <ion-text>
+              Ranking under construction.
+            </ion-text>
+          </div>
+         </div>
       </div>
     </div>
   </div>
-  <div>
-    <ion-segment (ionChange)="onSegmentChange($event)" value="members" [scrollable]="true">
-      <ion-segment-button value="members">Members</ion-segment-button>
-      <ion-segment-button value="schedules">Workout Sessions</ion-segment-button>
-      <ion-segment-button value="leaderboard">Leaderboard</ion-segment-button>
-    </ion-segment>
-
-    <div class="content" [hidden]="selectedSegment !== 'members'">
-      <ion-list class="transparent-list">
-        <group-user *ngFor="let userId of selectedGroup.members"
-        [userId]="userId"
-        [currentUserId]="currentUserId"
-        [modal]="modal"></group-user>
-      </ion-list>
-    </div>
-
-    <div class="content" [hidden]="selectedSegment !== 'schedules'">
-      <div class="zero-content-container ">
-        <div class="inner-zero-content-wrapper">
-          <ion-icon class="large-icon" name="receipt"></ion-icon><br>
-          <ion-text>
-            Group has no workout schedules.
-          </ion-text>
-        </div>
-       </div>
-    </div>
-
-    <div class="content" [hidden]="selectedSegment !== 'leaderboard'">
-      <div class="zero-content-container ">
-        <div class="inner-zero-content-wrapper">
-          <ion-icon class="large-icon" name="bar-chart"></ion-icon><br>
-          <ion-text>
-            Ranking under construction.
-          </ion-text>
-        </div>
-       </div>
-    </div>
-  </div>
-</div>
+</ion-content>
