--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -4,7 +4,7 @@
       <backbutton (click)="removeSession()"></backbutton>
     </ion-buttons>
     <ion-title>
-      <ion-chip>
+      <ion-chip (click)="selectGroup()">
         <ion-avatar>
           <ion-img alt="Silhouette of a person's head" [src]="group.profileURL"/>
         </ion-avatar>
@@ -31,16 +31,6 @@
       ></chatbox>
     </div>
   </div>
-
-  <!-- <ion-modal #modal trigger="group-name">
-    <ng-template>
-      <ion-content>
-        <group-home-page
-          [selectedGroup]="group"
-          [modal]="modal"></group-home-page>
-      </ion-content>
-    </ng-template>
-  </ion-modal> -->
 </ion-content> 
 
 <ion-footer class="input-field-footer">
