--- a/src/app/pages/groups/group-home-page/group-home-page.component.html
+++ b/src/app/pages/groups/group-home-page/group-home-page.component.html
@@ -2,7 +2,9 @@
   <div class="group-page-container">
     <div class="group-page-profile">
       <div>
-        <backbutton (click)="removeGroupSession()"></backbutton>
+        <ion-buttons>
+          <backbutton (click)="removeGroupSession()"></backbutton>
+        </ion-buttons>
       </div>
       <div class="profile-inner-wrapper">
         <div class="profile-img-container">
