--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -51,11 +51,13 @@
 
 <ng-template #noGroups>
   <ion-content>
-   <div class="zero-content-container ">
-    <ion-icon class="large-icon" name="people"></ion-icon><br>
-    <ion-text>
-      You have no groups. Click the add button to search and discover new groups.
-    </ion-text>
-   </div>
-  </ion-content>
+    <div class="zero-content-container ">
+     <div class="inner-zero-content-wrapper">
+       <ion-icon class="large-icon" name="people"></ion-icon><br>
+       <ion-text>
+         You have no groups. Click the add button to search and discover new groups.
+       </ion-text>
+     </div>
+    </div>
+   </ion-content>
 </ng-template>
