--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content *ngIf="schedules.length > 0; else noSchedules">
   <div class = "outer-container">
     <div class="body-content">
       <div *ngFor = "let schedule of schedules">
@@ -18,3 +18,16 @@
     </div>
   </div>
 </ion-content>
+
+<ng-template #noSchedules>
+  <ion-content [fullscreen]="true">
+   <div class="zero-content-container ">
+    <div class="inner-zero-content-wrapper">
+      <ion-icon class="large-icon" name="receipt-outline"></ion-icon><br>
+      <ion-text>
+       No schedules
+      </ion-text>
+    </div>
+   </div>
+  </ion-content>
+</ng-template>
