download page UI completed

--- a/src/app/pages/download/download.page.html
+++ b/src/app/pages/download/download.page.html
@@ -1,13 +1,26 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>download</ion-title>
+    <ion-title>Download Page</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">download</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-text-center">
+  <h1>The App will be installed on your device, if you are using Android.</h1>
+  <div style="padding-top: 45%;">
+    <h2>Credits</h2>
+    <p>
+      Developers:
+      <a href="https://github.com/COS301-SE-2023/SweatSession#members"
+        >Synapse Solutions</a
+      >
+    </p>
+    <p>
+      Badge Images:
+      <a
+        href="https://www.freepik.com/free-vector/badge-designs-collection_972250.htm#query=badge%20svg&position=4&from_view=keyword&track=ais"
+        >Image by anindyanfitri</a
+      >
+      on Freepik
+    </p>
+  </div>
 </ion-content>
