--- a/src/app/pages/badges/badges.page.html
+++ b/src/app/pages/badges/badges.page.html
@@ -17,4 +17,14 @@
     [imageName]="badge.imageName"
   ></badge>
   </ion-grid>
+  <div class="footer" class="ion-text-center">
+    <p>
+      Badge Images:<br>
+      <a
+        href="https://www.freepik.com/free-vector/badge-designs-collection_972250.htm#query=badge%20svg&position=4&from_view=keyword&track=ais"
+        >Image by anindyanfitri</a
+      >
+      on Freepik
+    </p>
+  </div>
 </ion-content>
