--- a/src/app/pages/otheruserbadges/other-user-badges.page.html
+++ b/src/app/pages/otheruserbadges/other-user-badges.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content class="badgesContainer">
-  <ion-grid class="loginGrid">
+  <ion-grid class="badgeGrid">
     <ng-container *ngIf="!noOfBadges; else hasBadges">
       <!-- <h1 *ngIf="name$ | async as usersName;" style="color: grey;">{{usersName}} has no badges.</h1> -->
 
@@ -33,4 +33,14 @@
       </ng-container>
     </ng-template>
   </ion-grid>
+  <div class="footer" class="ion-text-center" style="margin-top: auto;">
+    <p>
+      Badge Images:<br>
+      <a
+        href="https://www.freepik.com/free-vector/badge-designs-collection_972250.htm#query=badge%20svg&position=4&from_view=keyword&track=ais"
+        >Image by anindyanfitri</a
+      >
+      on Freepik
+    </p>
+  </div>
 </ion-content>
