started with UI

--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -1,3 +1,27 @@
-<p>
-  exercise-calculator works!
-</p>
+<ion-card class="ion-text-center">
+  <ion-card-title>
+    <h1>Exercise Calculator</h1>
+  </ion-card-title>
+  <ion-card-content>
+    <div>
+      <div class="exercise-number">Exercise 1</div>
+      <div>
+        <input placeholder="Name" />
+        <input placeholder="Sets" />
+        <input placeholder="Repetitions" />
+        <input placeholder="Weight (kg)" />
+        <!-- [(ngModel)]="name" [(ngModel)]="sets" [(ngModel)]="reps" [(ngModel)]="weight" -->
+      </div>
+      <ion-button color="danger" type="button" (click)="deleteExercise(1)">
+        <ion-icon name="trash"></ion-icon>
+      </ion-button>
+    </div>
+
+    <ion-button
+      class="adder"
+      type="button"
+      (click)="addExercise()">
+      <ion-icon name="add"></ion-icon>
+    </ion-button>
+  </ion-card-content>
+</ion-card>
