new health data model

--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
@@ -10,7 +10,7 @@
         </div>
       </ion-item>
       <ion-item lines="none">
-        <ion-label>BMR Value: {{calculateandGet_BMR()}}</ion-label>
+        <ion-label>BMR Value: {{bmr}}</ion-label>
       </ion-item>
       <ion-item lines="none">
         <ion-label>
