--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
@@ -10,11 +10,14 @@
         </div>
       </ion-item>
       <ion-item lines="none">
-        <ion-label>BMR Value: {{bmr}}</ion-label>
+        <ion-label>BMI Value: {{BMIValue.toFixed(2)}} Calories per day</ion-label>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-label>BMR Value: {{bmr.toFixed(2)}} Calories per day</ion-label>
       </ion-item>
       <ion-item lines="none">
         <ion-label>
-          TDEE Value: {{calculateandGet_TDEE()}} calories per day
+          TDEE Value:  calories per day
         </ion-label>
       </ion-item>
 <!--      <ion-item lines="none">-->
