Weight goals added to health form

--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
@@ -53,11 +53,10 @@
 <!--          <ion-select-option value="1.2">Gain Weight</ion-select-option>-->
 <!--        </ion-select>-->
 <!--      </ion-item>-->
-<!--      <ion-item lines="none">-->
-<!--        <ion-label-->
-<!--          >Calories Consumption: {{calculateTargetCalories()}}</ion-label-->
-<!--        >-->
-<!--      </ion-item>-->
+      <ion-item lines="none">
+        <ion-label
+          >Calories Consumption: {{targetCalories}}</ion-label>
+      </ion-item>
       <!--                <ion-button>Calculate</ion-button>-->
     </ion-list>
   </ion-card-content>
