--- a/src/app/pages/exercise-explorer/exercise-explorer.page.scss
+++ b/src/app/pages/exercise-explorer/exercise-explorer.page.scss
@@ -3,3 +3,18 @@
     --padding-end: 12px; 
     font-size: 24px; 
 }
+
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+  }
+
+  .center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Optional: This centers the container vertically as well */
+  }
+  
