--- a/src/app/pages/exercise-explorer/exercise-explorer.page.html
+++ b/src/app/pages/exercise-explorer/exercise-explorer.page.html
@@ -7,14 +7,13 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-content>
+  <ion-button (click)="openExerciseModal()">
+    Test Modal
+    <!-- I just made this button to test the modal. It will be deleted -->
+  </ion-button>
+</ion-content>
 
-  
-  <ion-content>
-    <ion-button (click)="openExerciseModal()">
-      Test Modal
-      <!-- I just made this button to test the modal. It will be deleted -->
-    </ion-button>
-  </ion-content>
- 
-<canvas #canvas id="canvas" style="height: 50vh; width: 50vw;" class="flex-center" ></canvas>
-
+<div class="center-container">
+  <canvas #canvas id="canvas" style="height: 50vh; width: 50vw;"></canvas>
+</div>
