--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -23,6 +23,14 @@
       </ion-label>
       <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
     </ion-item>
+
+    <ion-item lines="none" class="clickable" (click)="openhelpwebsite()">
+      <ion-icon name="help-circle-outline" class="menu-icons"></ion-icon>
+      <ion-label class="menu-label">
+        Help
+      </ion-label>
+      <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
+    </ion-item>
   </ion-content>
 </ion-menu>
 
