Added funct to calc calories burned ber exercise + added duration

--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -19,6 +19,7 @@
               <input formControlName="sets" placeholder="Sets" />
               <input formControlName="reps" placeholder="Repetitions" />
               <input formControlName="weight" placeholder="Weight (kg)" />
+              <input formControlName="duration" placeholder="Duration (min)" />
               <!-- [(ngModel)]="name" [(ngModel)]="sets" [(ngModel)]="reps" [(ngModel)]="weight" -->
             </div>
             <ion-button
