--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -24,6 +24,7 @@
             <input formControlName="sets" placeholder="Sets" />
             <input formControlName="reps" placeholder="Repetitions" />
             <input formControlName="weight" placeholder="Weight (kg)" />
+            <input formControlName="duration" placeholder="Duration (min)" />
           </div>
           <ion-button color="danger" type="button" (click)="deleteExercise(i)">
             <ion-icon name="trash"></ion-icon>
