--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.scss
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.scss
@@ -6,7 +6,7 @@
     text-align: center;
     margin: auto; 
   }
-  input {
+  input, select {
     display: block;
     width: 100%;
     align-self: center;
@@ -61,16 +61,18 @@
   }
   
   .exercise-number,
-  input[formControlName="name"],
+  select[formControlName="name"],
   input[formControlName="sets"],
   input[formControlName="reps"],
-  input[formControlName="weight"] {
+  input[formControlName="weight"],
+  input[formControlName="duration"] {
     font-family: 'Montserrat', sans-serif;
   }
   
-  input[formControlName="name"],
+  select[formControlName="name"],
   input[formControlName="sets"],
   input[formControlName="reps"],
-  input[formControlName="weight"] {
+  input[formControlName="weight"],
+  input[formControlName="duration"] {
     border-radius: 12px;
   }
